src/main/java/com/dansoftware/libraryapp/gui/theme/global-dark.css
/* STYLES OF THE WEB-BROWSER */
.browser {

}

.browser-toolbar {
    -fx-padding: 0.5px;
    -fx-background-color: #3e3e3e;
    -fx-border-width: 0.45 0 0 0;
    -fx-border-color: whitesmoke;
}

.browser-toolbar .browser-previous-btn {
    -fx-graphic: url(/com/dansoftware/libraryapp/image/browser/arrow_prev_white.png);
}

.browser-toolbar .browser-forward-btn {
    -fx-graphic: url(/com/dansoftware/libraryapp/image/browser/arrow_forw_white.png);
}

.browser-toolbar .browser-url-indicator-field {
    -fx-font-size: 16px;
    -fx-padding: 5px;
}

.browser-toolbar .browser-url-copier-btn {
    -fx-graphic: url(/com/dansoftware/libraryapp/image/browser/copy_to_clipboard_white.png);
}

.browser-toolbar .browser-default-opener-btn {
    -fx-graphic: url(/com/dansoftware/libraryapp/image/browser/open_def_browser_white.png);
}

.browser-toolbar .browser-reload-btn {
    -fx-graphic: url(/com/dansoftware/libraryapp/image/browser/reload_white.png);
}

.browser-place-holder {
}

.browser-place-holder .center-image-view {
    -fx-image: url(/com/dansoftware/libraryapp/image/util/empty_white.png);
    -fx-opacity: 0.7;
}

.browser-place-holder .label {
    -fx-text-fill: whitesmoke;
    -fx-font-size: 15px;
    -fx-text-alignment: center;
}

/* Document Viewer styles */
.document-viewer-place-holder .center-image-view {
    -fx-image: url(/com/dansoftware/libraryapp/image/util/empty_white.png);
    -fx-opacity: 0.5;
}

.document-viewer-place-holder .label {
    -fx-text-fill: whitesmoke;
    -fx-font-size: 15px;
    -fx-text-alignment: center;
}

/*Some tab pane trifles*/
.tab .tab-close-button {
    -fx-background-color: whitesmoke;
}

.tab .tab-close-button:hover {
    -fx-background-color: red;
}

/** LOGIN VIEW **/
.login-form {
    -fx-background-image: url("/com/dansoftware/libraryapp/image/login/background-dark.jpg");
    -fx-background-size: stretch;
}


.login-box {
    -fx-background-color: #3c3c40;
    -fx-effect: dropshadow(three-pass-box, #000000, 10.0, 0, 0, 0);
    -fx-border-radius: 0 0 10 10;
    -fx-background-radius: 0 0 10 10;
}

.login-box .source-adder {
    -fx-border-radius: 0 0 10 10;
    -fx-background-radius: 0 0 10 10;
}

.login-box .header .logo {
    -fx-image: url("/com/dansoftware/libraryapp/image/login/form-header_dark.png");
}

/*Workbech*/
* {
    -fx-light-text-color: rgba(100%, 100%, 100%, 0.7);

    -primary-color: #2c3649;
    -primary-variant-color: #293244;
    -secondary-color: #02ABF5;
    -secondary-variant-color: #005fa3;
    -background-color: #202530;
    -surface-color: #2e3540;
    -error-color: #B00020;
    -on-primary-color: -fx-light-text-color;
    -on-secondary-color: -fx-light-text-color;
    -on-background-color: #02ABF5;
    -on-surface-color: -fx-light-text-color;
    -on-error-color: #FFFFFF;
}

/*DBManagerTable*/
.state-indicator-file-not-exists {
    -fx-fill: #B00020;
}

.state-indicator-used {
    -fx-fill: green;
}

/**
UPDATE VIEW
 */
.update-view-available-label {
    -fx-font-size: 32px;
}

/** MDFXNode */
* {
    -mdfx-font-color: white;
    -mdfx-border-color-1: #ffffff;

    -mdfx-bg-color-1: #ccc;
    -mdfx-bg-color-2: #ddd;
    -mdfx-bg-color-3: #eee;
}


.markdown-text {
    -fx-font-family: ARIAL;
}

.markdown-italic {
    -fx-font-style: italic;
}

.markdown-bold {
    -fx-font-weight: bold;
}


/*InformationView*/
.info-logo-view {
    -fx-image: url("/com/dansoftware/libraryapp/image/logo/bookshelf_32.png");
}

/*
custom
 */
.button .glyph-icon {
    -fx-fill: black;
}

